--- a/tutorial/co_order.html
+++ b/tutorial/co_order.html
@@ -17,7 +17,7 @@
    <meta charset="utf-8" />
    <link href="co_base.css" rel="stylesheet"  />
    <link href="co_layout1.css" rel="stylesheet"  />
-    
+   <script src="co_order.js" async></script>
 </head>
 
 <body>
@@ -67,7 +67,7 @@
    </section>
    
    <section id="orderSection">
-      <form id="orderForm" name="orderForm">
+      <form id="orderForm" name="orderForm" method="get" action="co_payment.html">
         
         <table id="orderTable">
            <caption>Product Order</caption>
