--- a/tutorial/co_payment.html
+++ b/tutorial/co_payment.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Coctura Payment Page
-    Author: 
-    Date:   
+    Author: yelaina buford
+    Date:   5/15/20
 
     Filename: co_payment.html
    -->
@@ -17,7 +17,7 @@
    <meta charset="utf-8" />
    <link href="co_base.css" rel="stylesheet"  />
    <link href="co_layout2.css" rel="stylesheet"  />      
-
+   <script src="co_payment.js" async></script>
 </head>
 
 <body>
